# wade

./: .gitignore  .pre-commit-config.yaml  .wade.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  KNOWLEDGE.md  KNOWLEDGE.ratings.yml  PLAN.md  PR-SUMMARY.md  README.md  docker-compose.e2e.yml  docker-compose.yml  install.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: auto-version.yml  ci.yml  pr-title-lint.yml  release.yml
.sisyphus/plans/: bash-to-python-analysis.md  fix-code-quality.md  fix-parity-bugs.md  fix-spec-gaps.md
docs/: ARCHITECTURE.md
docs/dev/: architecture.md  documentation-policies.md  extending.md  skills-system.md  testing.md
scripts/: auto_version.py  changelog.py  check-all.sh  check.sh  e2e_smoke.sh  fmt.sh  install-hooks.sh  probe_models.py  probe_models.sh  release.sh  setup-release.sh  setup-worktree.sh  test-e2e-docker.sh  test-e2e.sh  test-live-ai-taskr.sh  test-live-ai.sh  test-live-gh.sh  test.sh
scripts/hooks/: pre-push
src/ghaiw/: __init__.py  __main__.py
src/wade/: __init__.py  __main__.py
src/wade/git/: pr.py  (+5 more)
templates/: agents-pointer.md  setup-worktree.sh.example  statusline-command.sh
templates/prompts/: deps-analysis.md  deps-interactive.md  implement-context.md  plan-session.md  pointer-placement.md  pr-summary.md  review-batch.md  review-code.md  review-context.md  review-plan.md  review-pr-comments.md  work-context.md
tests/: __init__.py  conftest.py  test_cli_basics.py
tests/e2e/: __init__.py  _support.py  conftest.py  mock_gh_script.py  test_admin_contract.py  test_check_contract.py  test_implement_work_done_contract.py  test_knowledge_contract.py  test_live_workflow.py  test_mock_gh_contract.py  test_plan_contract.py  test_review_contract.py  test_smart_start_contract.py  test_task_contract.py  test_work_sync_list_contract.py  test_workflow_chain.py
tests/integration/: __init__.py  test_check.py  test_git.py  test_implementation_lifecycle.py  test_init.py  test_knowledge.py  test_skill_install.py  test_work_lifecycle.py
tests/live/: __init__.py  test_gh_integration.py  test_wade_live_ai.py  test_wade_live_ai_taskr.py  test_wade_live_gh.py
tests/unit/: __init__.py  conftest.py  test_console.py  test_effort.py  test_probe_cli_args.py  test_yolo.py
(+305 files in other folders)
