[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wade"
version = "1.4.1"
description = "WADE — Workflow for AI-Driven Engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ivan Viragine" },
]
keywords = ["git", "workflow", "ai", "cli", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.16",
    "pyyaml>=6.0",
    "rich>=13.0",
    "structlog>=24.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
wade = "wade.cli.main:cli_main"

[project.urls]
Homepage = "https://github.com/ivanviragine/wade"
Repository = "https://github.com/ivanviragine/wade"

[tool.hatch.build.targets.wheel]
packages = ["src/wade"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "wade/templates"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["questionary.*", "prompt_toolkit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "error::ResourceWarning",
]

[tool.coverage.run]
source = ["wade"]
omit = ["tests/*"]
